--- a/Deployments/mongodb-deployment.yaml
+++ b/Deployments/mongodb-deployment.yaml
@@ -3,16 +3,16 @@ kind: Deployment
 metadata:
   name: mongodb-deployment
   labels:
-    app: mongodb
+    db: mongodb
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: mongodb
+      db: mongodb
   template:
     metadata:
       labels:
-        app: mongodb
+        db: mongodb
     spec:
       containers:
       - name: mongodb
