--- a/Deployments/mongodb-service.yaml
+++ b/Deployments/mongodb-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: mongodb-service
 spec:
   selector:
-    app: mongodb
+    db: mongodb
   ports:
   - protocol: TCP 
     port: 27017
