--- a/Deployments/easynotes-service.yaml
+++ b/Deployments/easynotes-service.yaml
@@ -2,9 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: easynotes-service
+  labels:
+    role: frontend
 spec:
   selector:
-    app: easynotes
+    role: frontend
   ports:
   - protocol: TCP
     port: 3000
